--- a/index.html
+++ b/index.html
@@ -38,42 +38,48 @@
     <main>
       <section id="about">
         <h2>About</h2>
+        <div class="row">
         <div class="section__description">
-          <div>
-            <p>
+          <div class="section__description--wrapper">
+            <p class="section__description--para">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
               asperiores non quo earum explicabo ex tempore, porro hic ad
               dolorum dicta inventore officiis maxime eligendi obcaecati nihil
               placeat iste nesciunt!
             </p>
-            <p>
+            <p class="section__description--para">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
               asperiores non quo earum explicabo ex tempore, porro hic ad
               dolorum dicta inventore officiis maxime eligendi obcaecati nihil
               placeat iste nesciunt!
             </p>
           </div>
-        </div>
           <figure>
-          <img src="./HTML Practise Assets/about.jpg" alt="" />
-        </figure>
+            <img class="about__img--wrapper" src="./HTML Practise Assets/about.jpg" alt="" />
+          </figure>
+        </div>
+      </div>
       </section>
 
       <section id="discord">
         <h2>Discord</h2>
+        <div class="row">
+        <div class="section__description">
         <figure>
-          <img src="./HTML Practise Assets/discord.png" alt="Discord" />
+          <img src="./HTML Practise Assets/discord.png" alt="Discord" class="about__img--wrapper"/>
         </figure>
-        <div>
-          <p>
+        <div class="section__description--wrapper">
+          <p class="section__description--para">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus,
             enim?
           </p>
-          <p>
+          <p class="section__description--para">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus,
             enim?
           </p>
         </div>
+        </div>
+      </div>
       </section>
 
       <section id="contact">
@@ -86,15 +92,16 @@
             type="text"
             placeholder="Nice website, let's connect!"
           ></textarea>
+          <button>Contact Us!</button>
         </form>
       </section>
     </main>
     <footer>
-      <img src="./HTML Practise Assets/FES.svg" alt="" />
-      <div>
-        <a href="#about">About</a>
-        <a href="#discord">Discord</a>
-        <a href="#contact">Contact</a>
+      <img class="footer__logo" src="./HTML Practise Assets/FES.svg" alt="" />
+      <div class="footer__links">
+        <a class="footer__link" href="#about">About</a>
+        <a class="footer__link" href="#discord">Discord</a>
+        <a class="footer__link" href="#contact">Contact</a>
       </div>
       <p>Copyright Frontend Simplified</p>
     </footer>
