--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       </nav>
       <header>
         <div class="row">
-          <div>
+          <div class="home__description">
             <h1>Best place to learn Frontend</h1>
             <p class="subheader">
               Go from an absolute beginner to pro witha a simpolified process
             </p>
-            <button>Start now</button>
+            <button class="home__description--button">Start now</button>
           </div>
           <figure>
             <img
